fixed gap on left of menu

--- a/NbtWebApp/js/CswMenu.css
+++ b/NbtWebApp/js/CswMenu.css
@@ -3,7 +3,7 @@
 
 ul.topnav {
 	list-style: none;
-	padding: 0 0 0 20px;
+	padding: 0 0 0 0px;
 	margin: 0;
 	float: left;
 	
